--- a/styles/main.css
+++ b/styles/main.css
@@ -23,8 +23,18 @@ body {
     align-items: center;
 }
 
+.pokemonStats ul {
+    list-style-type: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
 p {
+    text-align: left;
     background-color: #05B2DC;
+    padding: 5% 0;
+    border-radius: 20%;
 }
 
 
