--- a/styles/main.css
+++ b/styles/main.css
@@ -3,7 +3,7 @@ body {
     padding: 0;
 }
 
-#container {
+.container {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -14,6 +14,7 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: center;
+    background-color: rgba(255, 255, 255, 0.4);
 }
 
 .pokemonImg, .pokemonStats {
@@ -28,13 +29,6 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
-}
-
-p {
-    text-align: left;
-    background-color: #05B2DC;
-    padding: 5% 0;
-    border-radius: 20%;
 }
 
 
