--- a/styles/main.css
+++ b/styles/main.css
@@ -1,20 +1,34 @@
 body {
     margin: 0;
     padding: 0;
+    background: linear-gradient(
+        to bottom, 
+        #087CA7 0%, 
+        #087CA7 50%, 
+        #1D9300 50%, 
+        #1D9300 100%
+    );
 }
 
-.container {
+.main {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background-color: #087CA7;
+    /*background: linear-gradient(
+        to bottom, 
+        #087CA7 0%, 
+        #087CA7 50%, 
+        #1D9300 50%, 
+        #1D9300 100%
+    );*/
+    background: url("../images/stripes.png");
+    opacity: 0.5;
 }
 
 .pokemonCard {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    background-color: rgba(255, 255, 255, 0.4);
 }
 
 .pokemonImg, .pokemonStats {
