--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,4 +1,5 @@
 @import 'partials/animation';
+@import url('https://fonts.googleapis.com/css?family=Roboto+Mono');
 
 body {
     margin: 0;
@@ -12,34 +13,31 @@ body {
     );
     #pokedex {
         box-shadow: 0 0 10px #333;
+        font-family: 'Roboto Mono', monospace;
+        overflow: hidden;
         nav {}
         .main {
-            display: flex;
-            justify-content: center;
+            height: 80%;
             .carousel {
-                display: flex;
-                height: 60vh;
+                height: 60%;
+                overflow:visible;
                 .carousel-item {
+                    width: 30%;
                     .card {
-                        -webkit-animation: neonGlow 1.5s ease-in-out infinite alternate;
-                        -moz-animation: neonGlow 1.5s ease-in-out infinite alternate;
-                        animation: neonGlow 1.5s ease-in-out infinite alternate;
+                        @include neonGlow;
                         .card-image {
-                            .pokemonImg img {
+                            img {
                             }
                         }
                         .card-content { 
-                            .pokemonStats ul {
-                                list-style-type: none;
-                            }
                         }
                         .card-reveal {
                         }
                     }
                 }
             }
-            footer {}
         }
+        footer {}
     }
 }
 
