--- a/styles/main.scss
+++ b/styles/main.scss
@@ -30,10 +30,20 @@ body {
                             }
                         }
                         .card-content { 
-                            font-size: 1.1em;
+                            padding-top: 0;
+                            padding-bottom: 0;
+                            font-size: 1em;
+                            .card-title {
+                                margin: 0;
+                            }
+
+                            ul{
+                                padding: 0;
+                            }
                         }
                         .card-reveal {
-                            font-size: 1.1em;
+                            font-size: 1em;
+                            padding: 5;
                         }
                     }
                 }
