fix text padding and margins in cards

--- a/styles/main.css
+++ b/styles/main.css
@@ -53,16 +53,18 @@ body {
           -moz-animation-direction: alternate;
           -o-animation-direction: alternate;
           animation-direction: alternate; }
+          body #pokedex .main .carousel .carousel-item .card .card-image img {
+            width: 80%;
+            height: auto; }
           body #pokedex .main .carousel .carousel-item .card .card-content {
             padding-top: 0;
             padding-bottom: 0;
             font-size: 1em; }
             body #pokedex .main .carousel .carousel-item .card .card-content .card-title {
               margin: 0; }
-            body #pokedex .main .carousel .carousel-item .card .card-content ul {
-              padding: 0; }
           body #pokedex .main .carousel .carousel-item .card .card-reveal {
-            font-size: 1em;
-            padding: 5; }
+            font-size: 1em; }
+            body #pokedex .main .carousel .carousel-item .card .card-reveal table td {
+              padding: 5px; }
 
 /*# sourceMappingURL=main.css.map */
